# general-neural

./: .gitignore  README.md  data_io.py  decoders.py  glm_fitting.stan  glm_fitting_pop.stan  glm_fitting_qr_gaussian.stan  nested_cv.py  neural_analysis.py  paper_utilities.py  plotting.py  plotting_styles.py  pyproject.toml  pyro_utility.py  readme  rf_models.py  rnn_helpers.py  stan_utility.py  utility.py
general/: data_io.py  decoders.py  glm_fitting_pop.stan  neural_analysis.py  plotting.py  plotting_styles.py  pyro_utility.py  rf_models.py  stan_utility.py  utility.py
general/stan_models/: error_distrib.stan  glm_fitting_m_nm.stan  glm_fitting_nm_mvar_pop.stan  glm_fitting_null.stan  glm_fitting_pop_mnm.stan
general/tasks/: classification.py  cognitive.py
general/tf/: callbacks.py  losses.py  networks.py
general/torch/: any.py  feedforward.py  pretrained.py  regularizers.py  rnns.py  training.py
stan_decoder/: von_mises_pop.stan  von_mises_poptime.stan
stan_models/: glm_fitting.pkl  glm_fitting_m_nm.stan  glm_fitting_m_nm_mvar.stan  glm_fitting_m_nm_mvar_pop.stan  glm_fitting_m_nm_pop.stan  glm_fitting_nm_mvar.stan  glm_fitting_nm_mvar_pop.stan  glm_fitting_nm_pop.stan  glm_fitting_nomean.pkl  glm_fitting_nomean.stan  glm_fitting_pop_nm.stan  lm.stan  logit.stan  noise.stan  unif_resp.stan
tf/: networks.py
torch/: rnns.py  simple.py
