[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "general"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "wj2", email = "wjeffreyjohnston@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "numpy~=1.26.4",
  "scipy~=1.14.1",
  "matplotlib~=3.9.2",
  "scikit-learn~=1.5.1",
  "pandas~=2.2.2",
  "neo~=0.13.0",
  "quantities~=0.15.0",
  "dPCA~=1.0.5",
  "imbalanced-learn~=0.12.3",
  "arviz~=0.20.0",
  "joblib~=1.4.2",
]

[project.urls]
Documentation = "https://github.com/wj2/general-neural#readme"
Issues = "https://github.com/wj2/general-neural/issues"
Source = "https://github.com/wj2/general-neural"

[tool.hatch.version]
path = "general/__about__.py"
